# StlObjEx

./: CMakeLists.txt  README.md  build.sh
include/: FAConverter.hpp
include/details/: BaseStructures.hpp  FileIOTypes.hpp  GeometryUtils.hpp  Matrix4x4.hpp  Model.hpp  ModelOBJ.hpp
tests/: CMakeLists.txt  test.cpp
